[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mediautil"
version = "1.0.0"
description = "Multi-purpose media editing tool"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "p950tes"}
]

[tool.pytest.ini_options]
testpaths = ["mediautil/tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py40', 'py41']

[tool.isort]
profile = "black"
line_length = 100
